# LVGL

./: CMakeLists.txt  Makefile  README.en.md  README.md
include/: clock.h  lcd.h  lv_port_disp.h  lv_port_indev.h  ts.h  uart.h  wtd.h
src/: clock.c  lcd.c  lv_port_disp.c  lv_port_indev.c  main.c  ts.c  uart.c  wtd.c
